# learning-rust

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  inno-file.iss
packaging/windows/: inno-file.iss
src/: main.rs
src/printing/: routes.rs  utils.rs
