[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printers = "2.0.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.0"
headless_chrome = "1.0.9"
rand = "0.8.5"
actix-cors = "0.7.0"
